--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,24 @@ body {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 3fr;
 }
 
 .header {
     background-color: white;
     grid-column: 2;
     grid-row: 1;
-    padding: 0 30px 0 30px;
+    padding: 0 30px 10px 30px;
     display: grid;
-    grid-template-columns: 1.5fr 0.5fr;
-    grid-template-rows: 1fr 1fr
+    grid-template-columns: 1.5fr 0.8fr;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+    position: relative;
+    z-index: 2;
 }
 
 .header > * {
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .search-bar > img {
@@ -30,7 +33,7 @@ body {
 }
 
 .search-bar > input {
-    width: 70%;
+    width: 80%;
     height: 30px;
     padding-left: 15px;
     background-color: #e2e8f0;
@@ -51,6 +54,7 @@ body {
 }
 
 .account-greeting > div > p {
+    font-weight: bold;
     margin-bottom: 0;
 }
 
@@ -67,6 +71,7 @@ body {
     grid-column: 2;
     grid-row: 1;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     gap: 20px;
 }
@@ -74,6 +79,28 @@ body {
 .account-info-pic {
     width: 75px;
     height: 75px;
+}
+
+.account-info > h3 {
+    margin-right: 80px;
+}
+
+.action-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.action-buttons > button {
+    padding: 10px;
+    width: 100px;
+    border-radius: 20px;
+    font-weight: bolder;
+    color: white;
+    background-color: #1991d2;
+    border: 1px #1991d2;
+    outline: none;
 }
 
 
@@ -125,4 +152,11 @@ body {
     background-color: #e2e8f0;
     grid-column: 2;
     grid-row: 2;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-rows: 0.5fr 3fr;
+}
+
+.content-area > * {
+    border: 1px solid black;
 }
