--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 4.5fr;
 }
 
 button {
@@ -153,15 +153,81 @@ a {
     margin-top: 40px;
 }
 
-.content-area {
+.project {
     background-color: #e2e8f0;
     grid-column: 2;
     grid-row: 2;
+    padding: 20px 20px 0px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.project > * {
+    margin: 0;
+    /* border: 1px solid black; */
+}
+
+.project > h2 {
+    align-self: flex-start;
+}
+
+.content-area {
+    height: 100%;
+    background-color: #e2e8f0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 1fr);
-    grid-template-rows: 0.5fr 3fr;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 0.2fr 1fr 1fr 1fr;
 }
 
 .content-area > * {
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+
+.content-area > h2 {
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.content-header-2 {
+    grid-column: 3;
+    grid-row: 1;
+    margin: 0;
+}
+
+.card {
+    width: 90%;
+    height: 80%;
+    background-color: white;
+    border-radius: 10px;
+    border-left: 10px solid orange;
+    padding: 10px;
+    transition: box-shadow .3s;
+}
+
+.card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
+.card-1 {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.card-4 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.card-5 {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.card-6 {
+    grid-column: 2;
+    grid-row: 4;
 }
