--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,6 @@ a {
     align-items: center;
     margin-left: 10px;
     gap: 25px;
-    /* border: 1px solid black; */
 }
 
 .sidebar > div > img {
@@ -166,7 +165,6 @@ a {
 
 .project > * {
     margin: 0;
-    /* border: 1px solid black; */
 }
 
 .project > h2 {
@@ -182,10 +180,6 @@ a {
     grid-template-rows: 0.2fr 1fr 1fr 1fr;
 }
 
-.content-area > * {
-    /* border: 1px solid black; */
-}
-
 .content-area > h2 {
     margin: 0;
     display: flex;
@@ -199,17 +193,40 @@ a {
 }
 
 .card {
-    width: 90%;
+    width: 80%;
     height: 80%;
     background-color: white;
     border-radius: 10px;
     border-left: 10px solid orange;
-    padding: 10px;
+    padding: 30px 20px 30px 20px;
     transition: box-shadow .3s;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+}
+
+.card > div {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+.card > div > *{
+    margin: 0;
 }
 
 .card:hover {
     box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
+#card-icons {
+    margin-top: auto;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .card-1 {
